@@ -125,6 +125,14 @@ All user/site specific configuration is stored in doc.build.user.
     <!-- make sure the font metrics files are available -->
     <property name="metricsfile" value="xsl/fonts/arial.xml" />
     <if test="${not file::exists(metricsfile)}">
+      <property name="configmetricsfile" value="xsl/fonts/config.bat" />
+      <if test="${not file::exists(configmetricsfile)}">
+        <echo level="Warning">
+The file /docs/xsl/fonts/config.bat is missing. We will auto-create
+it from the config.bat.sample file before building the docs. Please
+consider adapting it to your needs.
+        </echo>
+      </if>
       <exec program="createmetrics.bat"
             basedir="xsl/fonts"
             workingdir="xsl/fonts"
