@@ -1,4 +1,4 @@
 set LOCAL_FOP_HOME=%~dp0\..\..\..\Tools\fop\
 set LIBDIR=%LOCAL_FOP_HOME%\lib
 set CMD="java" 
-set FONT_DIR=C:\Windows\Fonts
+set FONT_DIR=%windir%\Fonts
